# gxps

./: .gitignore  AUTHORS  ChangeLog  README.md  gxps.py  gxps.todo  makefile  requirements.txt  run_glade.sh  setup.cfg  setup.py
build_win/: README-PORTABLE.txt  README.md  _base.sh  _base_old.sh  bootstrap.sh  build-ico.sh  build.py  build.sh  build_ico.sh  create-launcher.py  depcheck.py  gxps.spec  gxps_onefile.spec  win_installer.nsi
data/: com.github.schachmett.gxps.desktop
data/config/: colors.ini  config.ini
data/ui/: gxps.glade  gxps_catalog.xml  menus.ui
gxps/: __init__.py  __main__.py  canvas_tools.py  commands.py  config.py  control.py  controller.py  gui.py  gui_tools.py  gxps.py  io.py  main.py  models.py  processing.py  spectrum.py  state.py  utility.py  version.py  view.py  widgets.py  xdg.py
gxps/assets/: com.github.schachmett.gxps.desktop  rsf.db
gxps/assets/gtk/: gxps.glade  gxps_catalog.xml  menus.ui  run_glade.sh
tests/: test_gui.py  test_io.py  test_processing.py  test_spectrum.py  test_startup.py  test_utility.py
tests/fixtures/: 2020-02-20_Ga2O3_new_check-oxidation.txt  21-04_015-XAS_100.xy  45Ni5Mg_pellet_09-09.txt  Al-NE-FeCr-S02p6-Fe2p-3.xy  Ru02_0063.txt  TiO2-110-f.txt  ag-fitted.xpl  contains_layer_zeros.txt  faulty.xy  test_file.gxps  win.txt
