[metadata]
name = gxps
description = XPS analysis
maintainer = Simon Fischer
maintainer_email = sf@simon-fischer.info
url = https://github.com/schachmett/gxps
classifier =
  Programming Language :: Python :: 3
  Environment :: X11 Applications :: GTK
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Topic :: Scientific/Engineering :: Physics
license = GPLv3
keywords =
  physics
  XPS
  x-ray photoelectron spectroscopy
  chemistry

[options]
packages = gxps
python_requires = ~=3.6

[options.package_data]
gxps = assets/*

[options.data_files]
share/applications = gxps/assets/com.github.schachmett.gxps.desktop
share/icons = gxps/assets/icons/hicolor/scalable/gxps.svg

[options.entry_points]
gui_scripts =
  gxps = gxps.main:main
